--- a/CODE/templates/index.html
+++ b/CODE/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Our Funky HTML Page</title>
+    <title>Cloud SaveData Manager</title>
     <meta name="description" content="Cloud SaveData Manager">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -19,13 +19,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="../static/js/getGameData.js"></script>
     <script src="../static/js/backupManager.js"></script>
+    <script src="../static/js/addGame.js"></script>
 </head>
 
 <body>
     <div class="container-fluid px-5 pt-4">
         <div class="row">
             <div class="col-8 p-2">
-                <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager</h3>
+                <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager <span style="color: chartreuse;">alpha</span></h3>
             </div>
             <div class="col p-2">
                 <a href='#' class="float-right pl-2">Config</a>
@@ -45,7 +46,7 @@
                                 <div class="row pt-3">
                                     <ul class="list-group">
                                         {%for i in range(0, len)%}
-                                            <li id="li-{{i}}" class="list-group-item bg-dark">{{games[i]}}</li>
+                                            <li id="li-{{i}}" class="list-group-item bg-dark game-li">{{games[i]}}</li>
                                         {%endfor%}
                                     </ul>
                                 </div>
@@ -101,16 +102,21 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form>
+                    <form id="new-game-form" method="post">
                         <div class="form-row">
                             <div class="col">
-                                <input type="text" class="form-control bg-dark text-white" id="game" placeholder="Videogame name"
+                                <input id="game-name-field" type="text" class="form-control bg-dark text-white" placeholder="Videogame name"
                                     name="game">
                             </div>
                         </div>
                         <div class="form-row mt-2">
                             <div class='col'>
-                                <input type="file" id="ctrl" webkitdirectory directory multiple/>
+                                <input id="'path-field" type="text" class="form-control bg-dark text-white" placeholder="Savedata Directory Path" name="path">
+                            </div>
+                        </div>
+                        <div class="form-row mt-2">
+                            <div class='col'>
+                                <input id="add-game-btn" type="submit" class="btn btn-success"></input>
                             </div>
                         </div>
                     </form>
@@ -118,7 +124,6 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Add Game</button>
                 </div>
 
             </div>
