--- a/CODE/templates/index.html
+++ b/CODE/templates/index.html
@@ -28,10 +28,11 @@
         <div class="row">
             <div class="col-6 p-2">
                 <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager <span style="color: chartreuse;">
-                        alpha <span style="font-size: 50%;">v0.2.0</span>
-                        <a href="https://github.com/macanepa/cloud-savedata-manager/releases" style="font-size: 70%;" class="ml-1">
-                            <i href="#" class="fa fa-download mx-1" aria-hidden="true" data-toggle="tooltip" data-placement="top"
-                            title="Search for Update"></i>update</a>
+                        alpha <span style="font-size: 50%;">v0.3.0</span>
+                        <a href="https://github.com/macanepa/cloud-savedata-manager/releases" style="font-size: 70%;"
+                            class="ml-1">
+                            <i href="#" class="fa fa-download mx-1" aria-hidden="true" data-toggle="tooltip"
+                                data-placement="top" title="Search for Update"></i>update</a>
                     </span></h3>
             </div>
             <div class="col-3">
@@ -83,15 +84,15 @@
                                     </ul>
                                 </div>
                                 <div class="row">
-                                    <div id="button-group"class="btn-group">
-                                        <button id="download-cloud-btn" disabled type="button"
-                                            class="btn btn-success">Restore
+                                    <div id="button-group" class="btn-group">
+                                        <button id="ddownload-cloud-btn" type="button" class="btn btn-success mt-2" disabled data-toggle="modal"
+                                            data-target="#restore-confirm-modal">Restore
                                             from Cloud</button>
-                                        <button id="upload-cloud-btn" disabled type="button"
-                                            class="btn btn-primary">Backup to
+                                        <button id="uupload-cloud-btn" type="button" class="btn btn-primary mt-2" disabled data-toggle="modal"
+                                            data-target="#backup-confirm-modal">Backup to
                                             Cloud</button>
-                                        <button id="delete-cloud-btn" disabled type="button"
-                                            class="btn btn-danger">Delete Cloud Savedata</button>
+                                        <button id="ddelete-cloud-btn" type="button" class="btn btn-danger mt-2" disabled data-toggle="modal"
+                                            data-target="#delete-confirm-modal">Delete Cloud Savedata</button>
                                     </div>
                                 </div>
                             </div>
@@ -100,16 +101,17 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <footer>
-            <div class="d-flex justify-content-center">
-                <div>Developed by Matías Cánepa</div>
-                <div>
-                    <i class="fa fa-github ml-3 mr-1" aria-hidden="true"></i>
-                    <a href="https://github.com/macanepa">GitHub</a>
-                </div>
+    </div>
+    <hr>
+    <footer>
+        <div class="d-flex justify-content-center">
+            <div>Developed by Matías Cánepa</div>
+            <div>
+                <i class="fa fa-github ml-3 mr-1" aria-hidden="true"></i>
+                <a href="https://github.com/macanepa">GitHub</a>
             </div>
-        </footer>
+        </div>
+    </footer>
     </div>
 
     <!-- The Modal -->
@@ -145,14 +147,98 @@
                         </div>
                     </form>
                 </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                </div>
-
             </div>
         </div>
     </div>
+
+
+
+    <div class="modal" id="restore-confirm-modal">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Restore Confirmation</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p>
+                        Are you sure you want to restore this savedata?
+                        <span style="color: chartreuse;">Local savedata will be overwritten.</span>
+                    </p>
+                    <div class="row">
+                        <div id="button-group" class="btn-group">
+                            <button id="download-cloud-btn" type="button" class="btn btn-success" data-dismiss="modal">Restore from
+                                Cloud</button>
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal" id="backup-confirm-modal">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Backup Confirmation</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p>
+                        Are you sure you want to backup this savedata?
+                        <span style="color: chartreuse;">Cloud savedata will be overwritten.</span>
+                    </p>
+                    <div class="row">
+                        <div id="button-group" class="btn-group">
+                            <button id="upload-cloud-btn" type="button" class="btn btn-primary" data-dismiss="modal">Backup to Cloud</button>
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="delete-confirm-modal">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Delete Confirmation</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p>
+                        Are you sure you want to delete this cloud savedata?
+                        <span style="color: chartreuse;">The savedata will be placed on the trash of your Google Drive
+                            account</span>
+                    </p>
+                    <div class="row">
+                        <div id="button-group" class="btn-group">
+                            <button id="delete-cloud-btn" type="button" class="btn btn-danger" data-dismiss="modal">Delete Cloud
+                                Savedata</button>
+                            <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
