links will open in new window

--- a/CODE/templates/index.html
+++ b/CODE/templates/index.html
@@ -29,7 +29,7 @@
             <div class="col-6 p-2">
                 <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager <span style="color: chartreuse;">
                         alpha <span style="font-size: 50%;">v0.3.0</span>
-                        <a href="https://github.com/macanepa/cloud-savedata-manager/releases" style="font-size: 70%;"
+                        <a href="https://github.com/macanepa/cloud-savedata-manager/releases" target="_blank" style="font-size: 70%;"
                             class="ml-1">
                             <i href="#" class="fa fa-download mx-1" aria-hidden="true" data-toggle="tooltip"
                                 data-placement="top" title="Search for Update"></i>update</a>
@@ -108,7 +108,7 @@
             <div>Developed by Matías Cánepa</div>
             <div>
                 <i class="fa fa-github ml-3 mr-1" aria-hidden="true"></i>
-                <a href="https://github.com/macanepa">GitHub</a>
+                <a href="https://github.com/macanepa"  target="_blank" >GitHub</a>
             </div>
         </div>
     </footer>
