--- a/CODE/templates/index.html
+++ b/CODE/templates/index.html
@@ -28,11 +28,13 @@
         <div class="row">
             <div class="col-6 p-2">
                 <h3 style="color: rgb(207, 207, 207);">Cloud SaveData Manager <span style="color: chartreuse;">
-                        alpha <span style="font-size: 50%;">v0.3.0</span>
+                        alpha <span style="font-size: 50%;">{{APP_VERSION}}</span>
+                        {%if new_version != None%}
                         <a href="https://github.com/macanepa/cloud-savedata-manager/releases" style="font-size: 70%;"
-                            class="ml-1">
-                            <i href="#" class="fa fa-download mx-1" aria-hidden="true" data-toggle="tooltip"
-                                data-placement="top" title="Search for Update"></i>update</a>
+                            class="ml-1"  data-toggle="tooltip"
+                            data-placement="top" title="Search for Update">
+                            <i href="#" class="fa fa-download mx-1" aria-hidden="true"></i>update</a>
+                                {%endif%}
                     </span></h3>
             </div>
             <div class="col-3">
