--- a/CODE/templates/index.html
+++ b/CODE/templates/index.html
@@ -55,7 +55,7 @@
                                     <h5>Games available on Cloud</h5>
                                 </div>
                                 <div class="row pt-3">
-                                    <ul class="list-group">
+                                    <ul class="list-group cursor-ul">
                                         {%for i in range(0, len)%}
                                         <li id="li-{{i}}" value="{{games[i]}}" class="list-group-item bg-dark game-li">
                                             {{games[i]}}</li>
@@ -77,7 +77,7 @@
                                     <div class="h5">Savedata Info</div>
                                 </div>
                                 <div class="row pt-3">
-                                    <ul>
+                                    <ul class="cursor-ul">
                                         <li id="game-title">Title:</li>
                                         <li id="path">Location:</li>
                                         <li id="game-size">Size:</li>
@@ -111,6 +111,9 @@
             <div>
                 <i class="fa fa-github ml-3 mr-1" aria-hidden="true"></i>
                 <a href="https://github.com/macanepa">GitHub</a>
+            </div>
+            <div>
+                <a class="ml-3" href="/documentation">Documentation</a>
             </div>
         </div>
     </footer>
