Minor change on documentation

--- a/CODE/templates/documentation.html
+++ b/CODE/templates/documentation.html
@@ -38,7 +38,7 @@
             <h5 class="px-3">Google Drive Credential</h5>
             <p class="px-3">The first step is to obtain a Google Drive API Credential</p>
             <ul>
-                <li>Head to <a href="https://developers.google.com/drive/api/v3/quickstart/python">this link</a> and
+                <li>Head to <a href="https://developers.google.com/drive/api/v3/quickstart/python" target="_blank">this link</a> and
                     click on Enable the Drive API</li>
                 <li>Enter any name for the project</li>
                 <li>Select Yes and Next</li>
