--- a/CODE/templates/documentation.html
+++ b/CODE/templates/documentation.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="container w-50">
+    <div class="container w-50 pb-3">
         <div class="container p-3 my-3 bg-dark text-white rounded-lg shadow">
             <h2 class="row justify-content-center align-items-center">Cloud Savedata Manager Documentation</h2>
         </div>
